--- a/conf/proxy.conf
+++ b/conf/proxy.conf
@@ -2,6 +2,11 @@ listen 80;
 
 location / {
   add_header       X-Served-By        $host;
+  # WS
+  proxy_set_header Upgrade $http_upgrade;
+  proxy_set_header Connection $http_connection;
+  proxy_http_version 1.1;
+  # Proxy!
   proxy_set_header Host               $host;
   proxy_set_header X-Forwarded-Scheme $scheme;
   proxy_set_header X-Forwarded-Proto  $scheme;
