Add proxy subfolder

--- a/conf/site.conf
+++ b/conf/site.conf
@@ -16,5 +16,15 @@ server {
   access_log /data/logs/www.domain.com_access.log proxy;
   error_log  /data/logs/www.domain.com_error.log warn;
 
+  # Uncomment to proxy to backend
+  # rewrite /api -> /
+  # location ~ ^/api/?(.*) {
+  #   proxy_pass $forward_scheme://$server:8080/$1$is_args$args;
+  # }
+  # or keep /api -> /api
+  # location /api {
+  #   proxy_pass $forward_scheme://$server:8080$request_uri;
+  # }
+
   include /etc/nginx/conf.d/include/proxy.conf;
 }
